tests/testcases/errors/BCE0134-2.boo
"""
BCE0134-2.boo(5,9): BCE0134: 'Foo.destructor' cannot return values.
"""
class Foo:
	def destructor() as int:
		pass

